# radix-leptos

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BETA_RELEASE_v0.8.2-beta.1.md  CHANGELOG.md  CHANGELOG_v0.8.3.md  CHANGELOG_v0.8.5.md  CLAUDE.md  COMPONENT_PROGRESS.md  COMPONENT_VARIANTS_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  LEPTOS_0.8.8_COMPATIBILITY_REMEDIATION_PLAN.md  LICENSE  Makefile  NIX_SETUP.md  PERFORMANCE_ANALYSIS.md  PHASE3_VALIDATION_REPORT.md  PHASE4_DEVELOPMENT_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESS_REPORT.md  PUBLICATION_SUCCESS.md  PUBLICATION_SUCCESS_v0.3.0.md  README.md  RELEASE_CHECKLIST_v0.7.0.md  RELEASE_COMPLETE_v0.8.4.md  RELEASE_COMPLETE_v0.8.5.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.4.md  RELEASE_NOTES_v0.8.5.md  RELEASE_NOTES_v0.9.0.md  RELEASE_SUMMARY.md  (+50 more)
crates/radix-leptos/: Cargo.toml  README.md
crates/radix-leptos-core/: Cargo.toml  README.md
crates/radix-leptos-core/src/: lib.rs
crates/radix-leptos-core/src/context/: collection.rs  mod.rs
crates/radix-leptos-core/src/hooks/: mod.rs  use_body_scroll_lock.rs  use_compose_refs.rs  use_controllable_state.rs  use_escape_keydown.rs  use_focus_trap.rs  use_id.rs  use_outside_click.rs  use_previous.rs
crates/radix-leptos-core/src/primitives/: mod.rs  portal.rs  presence.rs  slot.rs  visually_hidden.rs
crates/radix-leptos-core/src/utils/: accessibility.rs  dom.rs  events.rs  mod.rs
crates/radix-leptos-primitives/: Cargo.toml  README.md
crates/radix-leptos-primitives/proptest-regressions/components/: pagination.txt
crates/radix-leptos-primitives/src/: lib.rs  performance.rs  utils.rs
crates/radix-leptos-primitives/src/accessibility/: mod.rs
crates/radix-leptos-primitives/src/components/: accordion.rs  alert.rs  alert_dialog.rs  alert_dialog_tests.rs  aspect_ratio.rs  audio.rs  avatar.rs  badge.rs  bar_chart.rs  breadcrumbs.rs  button.rs  calendar.rs  chart.rs  checkbox.rs  code_editor.rs  collapsible.rs  color_picker.rs  combobox.rs  command_palette.rs  context_menu.rs  data_table.rs  date_picker.rs  dialog.rs  drag_drop.rs  dropdown_menu.rs  file_upload.rs  form.rs  form_validation.rs  gauge.rs  hover_card.rs  image.rs  image_viewer.rs  infinite_scroll.rs  label.rs  lazy_loading.rs  lazy_loading_optimized.rs  line_chart.rs  list.rs  menubar.rs  mod.rs  (+40 more)
crates/radix-leptos-primitives/src/components/advanced/: mod.rs
crates/radix-leptos-primitives/src/components/backup/: accordion.rs  audio.rs  avatar.rs  breadcrumbs.rs  carousel.rs  checkbox.rs  combobox.rs  context_menu.rs  date_picker.rs  dialog.rs  image.rs  label.rs  menubar.rs  navigation.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  slider.rs  switch.rs  table.rs  text_input.rs  tooltip.rs  video.rs
crates/radix-leptos-primitives/src/components/form_validation/: controls.rs  fields.rs  mod.rs  validation.rs
crates/radix-leptos-primitives/src/components/pagination/: context.rs  helpers.rs  items.rs  mod.rs
crates/radix-leptos-primitives/src/testing/: mod.rs
crates/radix-leptos-primitives/src/theming/: component_variants.rs  component_variants_tests.rs  css_variables.rs  css_variables_tests.rs  dark_mode.rs  dark_mode_tests.rs  integration_tests.rs  layout_system.rs  layout_system_tests.rs  mod.rs  prebuilt_themes.rs  prebuilt_themes_tests.rs  simple_tests.rs  size_variants.rs  size_variants_tests.rs  test_data.json  theme_customization.rs  theme_customization_tests.rs  theme_provider.rs  theme_provider_tests.rs
crates/radix-leptos-primitives/tests/: compilation_tests.rs  contract_tests.rs  e2e_tests.rs  integration_tests.rs  simple_integration_tests.rs
crates/radix-leptos/src/: lib.rs
examples/: Cargo.toml  PRODUCTION_DEPLOYMENT.md  alert_examples.html  audio_examples.html  avatar_examples.html  badge_examples.html  build.sh  carousel_examples.html  component-test.html  component_showcase.html  context_menu_examples.html  debug-carousel.html  deploy-production.sh  dropdown_menu_examples.html  image_examples.html  index.html  list-examples.html  list_examples.html  menubar_examples.html  package.json  pagination-examples.html  pnpm-lock.yaml  radix_leptos_examples_optimized.d.ts  radix_leptos_examples_optimized.js  radix_leptos_examples_optimized_bg.wasm.d.ts  scroll_area_examples.html  simple-bundle-test.html  tabs_examples.html  test-carousel.js  test_components.rs  timeline_examples.html  toast_examples.html  video_examples.html  wasm-loader.js  working-wasm-test.html
examples/docs-site/: Cargo.toml  Trunk.toml  index.html  styles.css
examples/docs-site/src/: main.rs
examples/docs-site/src/components/: code_block.rs  mod.rs  playground.rs  sidebar.rs
examples/docs-site/src/pages/: home.rs  mod.rs
examples/performance-dashboard/: Cargo.toml  index.html
examples/performance-dashboard/src/: main.rs
examples/playwright-report/: index.html
examples/production-server/: README.md  index.html  package.json  radix_leptos_examples.js
examples/src/: alert_examples.rs  badge_examples.rs  component_showcase.rs  context_menu_examples.rs  dropdown_menu_examples.rs  lib.rs  list_examples.rs  menubar_examples.rs  menubar_examples_fixed.rs  pagination_examples.rs  real_demo.rs  scroll_area_examples.rs  simple_components.rs  simple_dialog.rs  simple_test.rs  tabs_examples.rs  test_components.rs  timeline_examples.rs  toast_examples.rs
examples/src/backup/: audio_examples.rs  avatar_examples.rs  carousel_examples.rs  image_examples.rs  test_components.rs  video_examples.rs
examples/test-results/: .last-run.json
examples/tests/: carousel-debug.spec.ts  cross-browser.spec.ts  pagination-components.spec.ts  performance-stress.spec.ts  radix-leptos-comprehensive.spec.ts  run-comprehensive-tests.sh  simple.spec.ts
tests/performance/: Cargo.toml  README.md  bundle_optimization.rs  component_benchmarks.rs  component_performance.rs  mod.rs  quick-performance.spec.ts
(+216 files in other folders)
