[workspace]
resolver = "2"
members = [
    "crates/radix-leptos-core",
    "crates/radix-leptos-primitives", 
    "crates/radix-leptos",
    "examples",
]

[workspace.package]
version = "0.8.2-beta.1"
authors = ["Radix-Leptos Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cloud-shuttle/radix-leptos"
homepage = "https://radix-leptos.dev"
documentation = "https://docs.rs/radix-leptos"
description = "Rust port of Radix UI primitives for Leptos - High-performance, accessible UI components with 538KB optimized WASM bundle"
keywords = ["ui", "components", "accessibility", "leptos", "radix"]
categories = ["web-programming", "gui", "wasm"]

[workspace.dependencies]
leptos = { version = "0.8.8", features = ["ssr", "csr"] }
leptos_meta = "0.8.8"
leptos_router = "0.8.6"
# leptos-use = "0.11" # Temporarily disabled due to version conflicts
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# Dev dependencies
wasm-bindgen-test = "0.3"
leptos-testing = "0.1"
proptest = "1.0"
fake = "2.9"
criterion = "0.5"
cargo-mutants = "0.1"
tarpaulin = "0.27"

# Dev dependencies are defined in individual crates

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1  # Single codegen unit for better optimization
panic = "abort"  # Smaller panic handling
strip = true     # Remove debug symbols
