[package]
name = "radix-leptos-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.8", features = ["ssr", "csr"] }
radix-leptos-primitives = { path = "../crates/radix-leptos-primitives", features = ["core"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["cdylib"]
name = "radix_leptos_examples"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1  # Single codegen unit for better optimization
panic = "abort"  # Smaller panic handling
strip = true     # Remove debug symbols

