[package]
name = "radix-leptos-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core utilities and hooks for Radix-Leptos components"
keywords.workspace = true
categories.workspace = true

[dependencies]
leptos.workspace = true
# leptos-use.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
gloo-timers.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
console_error_panic_hook.workspace = true
proptest.workspace = true
fake.workspace = true

[features]
default = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]