[package]
name = "radix-leptos-primitives"
version = "0.8.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Primitive components for Radix-Leptos"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
docsrs = []
ssr = ["leptos/ssr", "radix-leptos-core/ssr"]
hydrate = ["leptos/hydrate", "radix-leptos-core/hydrate"]

# Component features
core = []
full = []

[dependencies]
radix-leptos-core = { version = "0.8.5", path = "../radix-leptos-core" }
leptos.workspace = true
web-sys.workspace = true
# leptos-use.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
regex = "1.0"
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
console_error_panic_hook.workspace = true
proptest.workspace = true
fake.workspace = true
