[package]
name = "radix-leptos-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = "0.6"
leptos_router = "0.6"
radix-leptos = { path = "../../crates/radix-leptos" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-net = { version = "0.4", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.1"

[dependencies.syntect-leptos]
version = "0.1"
optional = true

[features]
default = []
syntax-highlighting = ["syntect-leptos"]